# logsmith-ai

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  pipeline.rs
src/benches/: pipeline.rs
src/features/: extract.rs  mod.rs  window.rs
src/ingest/: parser.rs  reader.rs
src/output/: csv.rs  parquet.rs
src/pipeline/: mod.rs  pipeline.rs  rayon.rs
src/tests/: end_to_end.rs
