[package]
name = "logsmith"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = {version = "4.5.53", features = ["derive"] }
criterion = "0.8.1"
csv = "1.4.0"
log = "0.4.29"
env_logger = "0.11"
rayon = "1.11.0"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
arrow = "57.1.0"
parquet = "57.1.0"
